// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`npm2yarn plugin does not re-import tabs components real-world multiple npm2yarn usage 1`] = `
"import Tabs from '@theme/Tabs'
import TabItem from '@theme/TabItem'

# Title

<Tabs>
  <TabItem value="npm">
    \`\`\`bash
      $ npm install --global docusaurus
    \`\`\`
  </TabItem>

  <TabItem value="yarn" label="Yarn">
    \`\`\`bash
      $ yarn global add docusaurus
    \`\`\`
  </TabItem>

  <TabItem value="pnpm" label="pnpm">
    \`\`\`bash
      $ pnpm add --global docusaurus
    \`\`\`
  </TabItem>

  <TabItem value="bun" label="Bun">
    \`\`\`bash
      $ bun add --global docusaurus
    \`\`\`
  </TabItem>
</Tabs>

<div className="nested-npm2yarn">
  <Tabs>
    <TabItem value="npm">
      \`\`\`bash
      npm install
      \`\`\`
    </TabItem>

    <TabItem value="yarn" label="Yarn">
      \`\`\`bash
      yarn install
      \`\`\`
    </TabItem>

    <TabItem value="pnpm" label="pnpm">
      \`\`\`bash
      pnpm install
      \`\`\`
    </TabItem>

    <TabItem value="bun" label="Bun">
      \`\`\`bash
      bun install
      \`\`\`
    </TabItem>
  </Tabs>
</div>

\`\`\`bash
echo "no npm2yarn here"
\`\`\`

## Subtitle

<Tabs>
  <TabItem value="npm">
    \`\`\`bash
    yarn add @docusaurus/core
    \`\`\`
  </TabItem>

  <TabItem value="yarn" label="Yarn">
    \`\`\`bash
    yarn add @docusaurus/core
    \`\`\`
  </TabItem>

  <TabItem value="pnpm" label="pnpm">
    \`\`\`bash
    yarn add @docusaurus/core
    \`\`\`
  </TabItem>

  <TabItem value="bun" label="Bun">
    \`\`\`bash
    yarn add @docusaurus/core
    \`\`\`
  </TabItem>
</Tabs>
"
`;

exports[`npm2yarn plugin does not re-import tabs components when already imported above 1`] = `
"import Tabs from '@theme/Tabs';

import TabItem from '@theme/TabItem';

<Tabs>
  <TabItem value="npm">
    \`\`\`bash
      $ npm install --global docusaurus
    \`\`\`
  </TabItem>

  <TabItem value="yarn" label="Yarn">
    \`\`\`bash
      $ yarn global add docusaurus
    \`\`\`
  </TabItem>

  <TabItem value="pnpm" label="pnpm">
    \`\`\`bash
      $ pnpm add --global docusaurus
    \`\`\`
  </TabItem>

  <TabItem value="bun" label="Bun">
    \`\`\`bash
      $ bun add --global docusaurus
    \`\`\`
  </TabItem>
</Tabs>
"
`;

exports[`npm2yarn plugin does not re-import tabs components when already imported below 1`] = `
"<Tabs>
  <TabItem value="npm">
    \`\`\`bash
      $ npm install --global docusaurus
    \`\`\`
  </TabItem>

  <TabItem value="yarn" label="Yarn">
    \`\`\`bash
      $ yarn global add docusaurus
    \`\`\`
  </TabItem>

  <TabItem value="pnpm" label="pnpm">
    \`\`\`bash
      $ pnpm add --global docusaurus
    \`\`\`
  </TabItem>

  <TabItem value="bun" label="Bun">
    \`\`\`bash
      $ bun add --global docusaurus
    \`\`\`
  </TabItem>
</Tabs>

import Tabs from '@theme/Tabs';

import TabItem from '@theme/TabItem';
"
`;

exports[`npm2yarn plugin does not work when language is not set 1`] = `
"\`\`\`npm2yarn
npm install --save docusaurus-plugin-name
\`\`\`

\`\`\`bash
npm install --save docusaurus-plugin-name
\`\`\`

\`\`\`shell
npm install --save docusaurus-plugin-name
\`\`\`
"
`;

exports[`npm2yarn plugin work with bun converter 1`] = `
"import Tabs from '@theme/Tabs'
import TabItem from '@theme/TabItem'

## Installing a plugin

A plugin is usually a npm package, so you install them like other npm packages using npm.

<Tabs>
  <TabItem value="npm">
    \`\`\`bash
    npm install --save docusaurus-plugin-name
    \`\`\`
  </TabItem>

  <TabItem value="bun" label="Bun">
    \`\`\`bash
    bun add docusaurus-plugin-name
    \`\`\`
  </TabItem>
</Tabs>
"
`;

exports[`npm2yarn plugin work with custom converter 1`] = `
"import Tabs from '@theme/Tabs'
import TabItem from '@theme/TabItem'

## Installing a plugin

A plugin is usually a npm package, so you install them like other npm packages using npm.

<Tabs>
  <TabItem value="npm">
    \`\`\`bash
    npm install --save docusaurus-plugin-name
    \`\`\`
  </TabItem>

  <TabItem value="Turbo">
    \`\`\`bash
    turbo install --save docusaurus-plugin-name
    \`\`\`
  </TabItem>
</Tabs>
"
`;

exports[`npm2yarn plugin work with pnpm converter 1`] = `
"import Tabs from '@theme/Tabs'
import TabItem from '@theme/TabItem'

## Installing a plugin

A plugin is usually a npm package, so you install them like other npm packages using npm.

<Tabs>
  <TabItem value="npm">
    \`\`\`bash
    npm install --save docusaurus-plugin-name
    \`\`\`
  </TabItem>

  <TabItem value="pnpm" label="pnpm">
    \`\`\`bash
    pnpm add docusaurus-plugin-name
    \`\`\`
  </TabItem>
</Tabs>
"
`;

exports[`npm2yarn plugin work with yarn converter 1`] = `
"import Tabs from '@theme/Tabs'
import TabItem from '@theme/TabItem'

## Installing a plugin

A plugin is usually a npm package, so you install them like other npm packages using npm.

<Tabs>
  <TabItem value="npm">
    \`\`\`bash
    npm install --save docusaurus-plugin-name
    \`\`\`
  </TabItem>

  <TabItem value="yarn" label="Yarn">
    \`\`\`bash
    yarn add docusaurus-plugin-name
    \`\`\`
  </TabItem>
</Tabs>
"
`;

exports[`npm2yarn plugin works on installation file 1`] = `
"import Tabs from '@theme/Tabs'
import TabItem from '@theme/TabItem'

<Tabs>
  <TabItem value="npm">
    \`\`\`bash
      $ npm install --global docusaurus
    \`\`\`
  </TabItem>

  <TabItem value="yarn" label="Yarn">
    \`\`\`bash
      $ yarn global add docusaurus
    \`\`\`
  </TabItem>

  <TabItem value="pnpm" label="pnpm">
    \`\`\`bash
      $ pnpm add --global docusaurus
    \`\`\`
  </TabItem>

  <TabItem value="bun" label="Bun">
    \`\`\`bash
      $ bun add --global docusaurus
    \`\`\`
  </TabItem>
</Tabs>
"
`;

exports[`npm2yarn plugin works on plugin file 1`] = `
"import Tabs from '@theme/Tabs'
import TabItem from '@theme/TabItem'

## Installing a plugin

A plugin is usually a npm package, so you install them like other npm packages using npm.

<Tabs>
  <TabItem value="npm">
    \`\`\`bash
    npm install --save docusaurus-plugin-name
    \`\`\`
  </TabItem>

  <TabItem value="yarn" label="Yarn">
    \`\`\`bash
    yarn add docusaurus-plugin-name
    \`\`\`
  </TabItem>

  <TabItem value="pnpm" label="pnpm">
    \`\`\`bash
    pnpm add docusaurus-plugin-name
    \`\`\`
  </TabItem>

  <TabItem value="bun" label="Bun">
    \`\`\`bash
    bun add docusaurus-plugin-name
    \`\`\`
  </TabItem>
</Tabs>
"
`;

exports[`npm2yarn plugin works with common commands 1`] = `
"import Tabs from '@theme/Tabs'
import TabItem from '@theme/TabItem'

<Tabs groupId="npm2yarn">
  <TabItem value="npm">
    \`\`\`bash
    npm run xxx -- --arg
    \`\`\`
  </TabItem>

  <TabItem value="yarn" label="Yarn">
    \`\`\`bash
    yarn xxx --arg
    \`\`\`
  </TabItem>

  <TabItem value="pnpm" label="pnpm">
    \`\`\`bash
    pnpm run xxx --arg
    \`\`\`
  </TabItem>

  <TabItem value="bun" label="Bun">
    \`\`\`bash
    bun run xxx --arg
    \`\`\`
  </TabItem>
</Tabs>

<Tabs groupId="npm2yarn">
  <TabItem value="npm">
    \`\`\`bash
    npm install package
    \`\`\`
  </TabItem>

  <TabItem value="yarn" label="Yarn">
    \`\`\`bash
    yarn add package
    \`\`\`
  </TabItem>

  <TabItem value="pnpm" label="pnpm">
    \`\`\`bash
    pnpm add package
    \`\`\`
  </TabItem>

  <TabItem value="bun" label="Bun">
    \`\`\`bash
    bun add package
    \`\`\`
  </TabItem>
</Tabs>

<Tabs groupId="npm2yarn">
  <TabItem value="npm">
    \`\`\`bash
    npm remove package-name
    \`\`\`
  </TabItem>

  <TabItem value="yarn" label="Yarn">
    \`\`\`bash
    yarn remove package-name
    \`\`\`
  </TabItem>

  <TabItem value="pnpm" label="pnpm">
    \`\`\`bash
    pnpm remove package-name
    \`\`\`
  </TabItem>

  <TabItem value="bun" label="Bun">
    \`\`\`bash
    bun remove package-name
    \`\`\`
  </TabItem>
</Tabs>

<Tabs groupId="npm2yarn">
  <TabItem value="npm">
    \`\`\`bash
    npm init docusaurus
    npm init docusaurus@latest my-website classic
    \`\`\`
  </TabItem>

  <TabItem value="yarn" label="Yarn">
    \`\`\`bash
    yarn create docusaurus
    yarn create docusaurus@latest my-website classic
    \`\`\`
  </TabItem>

  <TabItem value="pnpm" label="pnpm">
    \`\`\`bash
    pnpm create docusaurus
    pnpm create docusaurus@latest my-website classic
    \`\`\`
  </TabItem>

  <TabItem value="bun" label="Bun">
    \`\`\`bash
    bunx create-docusaurus
    bunx create-docusaurus@latest my-website classic
    \`\`\`
  </TabItem>
</Tabs>
"
`;

exports[`npm2yarn plugin works with simplest md 1`] = `
"import Tabs from '@theme/Tabs'
import TabItem from '@theme/TabItem'

# Title

Hey

<Tabs>
  <TabItem value="npm">
    \`\`\`bash
    npm install test
    \`\`\`
  </TabItem>

  <TabItem value="yarn" label="Yarn">
    \`\`\`bash
    yarn add test
    \`\`\`
  </TabItem>

  <TabItem value="pnpm" label="pnpm">
    \`\`\`bash
    pnpm add test
    \`\`\`
  </TabItem>

  <TabItem value="bun" label="Bun">
    \`\`\`bash
    bun add test
    \`\`\`
  </TabItem>
</Tabs>
"
`;

exports[`npm2yarn plugin works with sync option 1`] = `
"import Tabs from '@theme/Tabs'
import TabItem from '@theme/TabItem'

## Installing a plugin

A plugin is usually a npm package, so you install them like other npm packages using npm.

<Tabs groupId="npm2yarn">
  <TabItem value="npm">
    \`\`\`bash
    npm install --save docusaurus-plugin-name
    \`\`\`
  </TabItem>

  <TabItem value="yarn" label="Yarn">
    \`\`\`bash
    yarn add docusaurus-plugin-name
    \`\`\`
  </TabItem>

  <TabItem value="pnpm" label="pnpm">
    \`\`\`bash
    pnpm add docusaurus-plugin-name
    \`\`\`
  </TabItem>

  <TabItem value="bun" label="Bun">
    \`\`\`bash
    bun add docusaurus-plugin-name
    \`\`\`
  </TabItem>
</Tabs>
"
`;
